<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/progressBar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".User_Profile">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/circleImageView"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="36dp"
        android:src="@drawable/profileimg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </de.hdodenhof.circleimageview.CircleImageView>

    <Button
        android:id="@+id/Save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="60dp"
        android:text="Save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <ProgressBar
        android:id="@+id/progressbar"
        style="?android:attr/progressBarStyle"
        android:layout_width="79dp"
        android:layout_height="65dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="414dp"
        android:layout_height="394dp"
        android:layout_marginTop="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/circleImageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginStart="61dp"
                android:text="@string/Username">
            </TextView>

            <EditText
                android:id="@+id/e1"
                android:layout_width="294dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:ems="10"
                android:inputType="textPersonName">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginStart="61dp"
                android:text="@string/Name">
            </TextView>

            <EditText
                android:id="@+id/e2"
                android:layout_width="294dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:ems="10"
                android:inputType="textPersonName">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginStart="61dp"
                android:text="@string/SName">
            </TextView>

            <EditText
                android:id="@+id/e3"
                android:layout_width="294dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:ems="10"
                android:inputType="textPersonName">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginStart="61dp"
                android:text="@string/Email">
            </TextView>

            <EditText
                android:id="@+id/e4"
                android:layout_width="294dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:ems="10"
                android:inputType="textPersonName">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginStart="61dp"
                android:text="@string/Gender">
            </TextView>

            <EditText
                android:id="@+id/e5"
                android:layout_width="294dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:ems="10"
                android:inputType="textPersonName">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginStart="61dp"
                android:text="@string/Phone">
            </TextView>

            <EditText
                android:id="@+id/n1"
                android:layout_width="294dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:ems="10"
                android:inputType="number">

            </EditText>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginStart="61dp"
                android:text="@string/Bio">
            </TextView>

            <EditText
                android:id="@+id/e6"
                android:layout_width="294dp"
                android:layout_height="50dp"
                android:layout_marginStart="60dp"
                android:ems="10"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>